--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
 
+<html>
+  <head>
+  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  	 <title>Shop</title>
+  </head>
+    <body>
+      <h1>Add items to your cart:</h1>
+
+      <form method="POST" action="/checkout">
+
+        <label for="team[name]">Item: </label><input id="item" type="text" name="item"><br>
+
+        <input type="submit" value="Submit" id="submit">
+      </form>
+
+    </body>
+</html>
